--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,6 +40,7 @@
 /* Style cho các mục trong dropdown */
  .dropdown-content-left a {
   color: black;
+  font-weight: 500;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
