--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,11 +77,106 @@
   cursor: pointer;
 }
 
-input {
-  border: 2px solid rgb(235, 234, 234);
+input, textarea, select {
+  border: 1px solid rgb(209 213 219);
+  border-radius: 4px;
 }
 
-input:focus {
-  border: 2px solid rgb(2, 2, 20);
+input:focus, textarea:focus, select:focus {
+  border: 1px solid rgb(96,165,250);
+  box-shadow: 0 0 5px rgba(96,165,250,1);
   outline: none;
 }
+
+input[type="file"] {
+  border: 0;
+}
+
+.card-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0;
+  margin: 0;
+}
+
+
+.link-active {
+  border-bottom: 3px solid green;
+  color: green;
+}
+
+.link-active-mobile {
+  color: #F8B63B;
+}
+
+/* Chỉ áp dụng cho trình duyệt WebKit như Chrome, Safari */
+::-webkit-scrollbar {
+  width: 8px; /* Đặt chiều rộng của thanh cuộn dọc */
+  height: 8px; /* Đặt chiều cao của thanh cuộn ngang */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey; /* Màu của thanh cuộn */
+  border-radius: 4px; /* Bo tròn các góc của thanh cuộn */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Màu nền của track */
+  border-radius: 4px; /* Bo tròn các góc của track */
+}
+
+html {
+  overflow-y: scroll;
+}
+
+
+/* card css */
+
+.card-container {
+  perspective: 1000px;
+  width: 700px;
+  
+}
+
+.card {
+  width: 700px;
+  height: 350px;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+  cursor: pointer;
+}
+
+
+.card.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
+
+.card-front {
+  color: #000;
+}
+
+@media (max-width: 900px) {
+  .card {
+      height: 250px;
+      width: 400px;
+  }
+} 
